Set up sedd.js file, insert mock data into db.

--- a/package.json
+++ b/package.json
@@ -8,10 +8,28 @@
     "node": ">=6.13.0"
   },
   "scripts": {
+    "dev": "webpack --watch",
+    "start": "nodemon server/serverIndex.js",
+    "seed": "node ./database/seed.js"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
+    "express": "^4.16.4",
+    "faker": "^4.1.0",
+    "jest": "^23.6.0",
+    "mongoose": "^5.3.6",
+    "nodemon": "^1.18.4",
+    "react": "^16.6.0",
+    "react-dom": "^16.6.0",
+    "request": "^2.88.0",
+    "webpack": "^4.22.0"
   },
   "devDependencies": {
-    "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor"
+    "@babel/core": "^7.1.2",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.4",
+    "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
+    "webpack-cli": "^3.1.2"
   }
 }
