--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+  "name": "photo",
   "version": "",
   "description": "",
   "author": "",
@@ -10,15 +10,18 @@
   "scripts": {
     "dev": "webpack --watch",
     "start": "nodemon server/serverIndex.js",
-    "seed": "node ./database/seed.js"
+    "seed": "node ./database/seed.js",
+    "lint": "eslint --ignore-path .gitignore . --fix"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "faker": "^4.1.0",
     "jest": "^23.6.0",
+    "jquery": "^3.3.1",
     "mongoose": "^5.3.6",
     "nodemon": "^1.18.4",
+    "prop-types": "^15.6.2",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "request": "^2.88.0",
@@ -28,8 +31,14 @@
     "@babel/core": "^7.1.2",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
+    "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.4",
+    "eslint": "^5.8.0",
+    "eslint-config-airbnb": "^17.1.0",
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-react": "^7.11.1",
     "webpack-cli": "^3.1.2"
   }
 }
