--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-jest": "^23.6.0",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "express-http-proxy": "^1.4.0",
     "faker": "^4.1.0",
     "jquery": "^3.3.1",
     "mongoose": "^5.3.6",
