--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "babel-core": "^7.0.0-bridge",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.4",
+    "cors": "^2.8.5",
     "css-loader": "^1.0.1",
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.6.0",
@@ -61,6 +62,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^23.6.0",
     "jest-cli": "^23.6.0",
+    "path": "^0.12.7",
     "style-loader": "^0.23.1",
     "webpack-babel-jest": "^1.0.4",
     "webpack-cli": "^3.1.2"
