--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "scripts": {
     "dev": "webpack --watch",
+    "build": "webpack",
     "start": "nodemon server/serverIndex.js",
     "seed": "node ./database/seed.js",
     "lint": "eslint --ignore-path .gitignore . --fix",
