--- a/package.json
+++ b/package.json
@@ -32,24 +32,24 @@
     "express-http-proxy": "^1.4.0",
     "faker": "^4.1.0",
     "jquery": "^3.3.1",
-    "mongoose": "^5.3.6",
+    "mongoose": "^5.4.19",
     "nodemon": "^1.18.4",
+    "path": "^0.12.7",
     "prop-types": "^15.6.2",
-    "react": "^16.6.0",
-    "react-dom": "^16.6.0",
+    "react": "^16.8.5",
+    "react-dom": "^16.8.5",
     "react-modal": "^3.6.1",
     "request": "^2.88.0",
-    "sinon": "^7.1.1",
-    "webpack": "^4.22.0"
+    "sinon": "^7.1.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.1.2",
+    "@babel/core": "^7.4.0",
     "@babel/plugin-proposal-class-properties": "^7.1.0",
-    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-env": "^7.4.2",
     "@babel/preset-react": "^7.0.0",
     "babel-core": "^7.0.0-bridge",
     "babel-eslint": "^10.0.1",
-    "babel-loader": "^8.0.4",
+    "babel-loader": "^8.0.5",
     "css-loader": "^1.0.1",
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.6.0",
@@ -63,7 +63,8 @@
     "jest": "^23.6.0",
     "jest-cli": "^23.6.0",
     "style-loader": "^0.23.1",
+    "webpack": "^4.29.6",
     "webpack-babel-jest": "^1.0.4",
-    "webpack-cli": "^3.1.2"
+    "webpack-cli": "^3.3.0"
   }
 }
