--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
       "window": true
     }
   },
-
   "repository": {
     "type": "git",
     "url": "https://github.com/JISHAX/photo.git"
@@ -44,6 +43,8 @@
     "faker": "^4.1.0",
     "jquery": "^3.3.1",
     "mongoose": "^5.4.19",
+    "mysql": "^2.16.0",
+    "mysql2": "^1.6.5",
     "nodemon": "^1.18.4",
     "path": "^0.12.7",
     "prop-types": "^15.6.2",
@@ -73,6 +74,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^23.6.0",
     "jest-cli": "^23.6.0",
+    "sequelize": "^5.6.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.29.6",
     "webpack-babel-jest": "^1.0.4",
