--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "babel-jest": "^23.6.0",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
+    "csv-writer": "^1.2.0",
     "express": "^4.16.4",
     "express-http-proxy": "^1.4.0",
     "faker": "^4.1.0",
