--- a/package.json
+++ b/package.json
@@ -37,13 +37,16 @@
   "dependencies": {
     "babel-jest": "^23.6.0",
     "body-parser": "^1.18.3",
+    "cassandra-driver": "^4.0.0",
     "cors": "^2.8.5",
     "csv-writer": "^1.2.0",
     "express": "^4.16.4",
     "express-http-proxy": "^1.4.0",
     "faker": "^4.1.0",
+    "jdk": "0.0.0",
     "jquery": "^3.3.1",
-    "mongoose": "^5.4.19",
+    "mongoose": "^5.5.2",
+    "mongoose-auto-increment": "^5.0.1",
     "mysql": "^2.16.0",
     "mysql2": "^1.6.5",
     "nodemon": "^1.18.4",
