--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "cassandra-driver": "^4.0.0",
     "cors": "^2.8.5",
     "csv-writer": "^1.2.0",
+    "eslint-config-prettier": "^4.1.0",
+    "eslint-plugin-prettier": "^3.0.1",
     "express": "^4.16.4",
     "express-http-proxy": "^1.4.0",
     "faker": "^4.1.0",
@@ -70,15 +72,16 @@
     "css-loader": "^1.0.1",
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.6.0",
-    "eslint": "^5.8.0",
+    "eslint": "^5.3.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-react": "^7.11.1",
+    "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.12.4",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^23.6.0",
     "jest-cli": "^23.6.0",
+    "prettier": "^1.17.0",
     "sequelize": "^5.6.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.29.6",
