--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "mongoose-auto-increment": "^5.0.1",
     "mysql": "^2.16.0",
     "mysql2": "^1.6.5",
+    "newrelic": "^5.7.0",
     "nodemon": "^1.18.4",
     "path": "^0.12.7",
     "pg": "^7.10.0",
